# sonic

./: Cargo.toml  README.md  init.lua
lua/: mapping.lua  plugins.lua  settings.lua
lua/config/: git-gutter.lua  lspconfig.lua
plugin/: packer_compiled.lua
server/: Cargo.toml  client.py
server/src/: main.rs  server.rs
server/src/server/: errors.rs  lexer.rs  mod.rs  parser.rs
src/: lib.rs  main.rs  memory_pool.rs  pool.rs  store.rs  thread_pool.rs
