[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.26"
clap = {version="4.3.2", features = ["derive"]}

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "server_benchmark"
harness = false

[dependencies.core]
path = "../"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
